(Client) Mostrar u ocultar contraseña > register component

--- a/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.scss
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.scss
@@ -19,3 +19,11 @@ a {
 .input {
     width: 100%;
 }
+
+.icon {
+    float: initial;
+    margin-left: -30px;
+    margin-top: 3px;
+    position: relative;
+    z-index: 2;
+}
