--- a/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/register/register.component.html
@@ -53,7 +53,8 @@
             <label for="password">Contraseña:</label>
         </div>
         <div class="col-8">
-            <input class="input" type="password" formControlName="pass" placeholder="Contraseña">
+            <input class="input" [type]="showPass ? 'text' : 'password'" formControlName="pass" placeholder="Contraseña">
+            <i (click)="showPass = !showPass" [class]="  showPass ? 'bi bi-eye-slash-fill icon' : 'bi bi-eye-fill icon'"></i>
         </div>
         <div class="errorForm" *ngIf="submitted && myForm['pass'].errors">
             <div *ngIf="myForm['pass'].errors['required']">
@@ -66,7 +67,8 @@
             <label for="password">Repetir contraseña:</label>
         </div>
         <div class="col-8">
-            <input class="input" type="password" formControlName="repeatPass" placeholder="Repetir contraseña">
+            <input class="input" [type]="showPass ? 'text' : 'password'" formControlName="repeatPass" placeholder="Repetir contraseña">
+            <i (click)="showPass = !showPass" [class]="  showPass ? 'bi bi-eye-slash-fill icon' : 'bi bi-eye-fill icon'"></i>
         </div>
         <div class="errorForm" *ngIf="submitted && myForm['repeatPass'].errors && !myForm['pass'].errors">
             <div *ngIf="myForm['repeatPass'].errors['required']">
